Rearrange module-info. Add add-opens to arg line in surefire